<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">androidRCM</string>

    <!-- Main Activity -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="map_update">Map Update</string>
    <string name="buttons_config">Buttons Config</string>
    <string name="arena">Proceed to Arena</string>

    <!-- BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!--Preference Activity -->
    <string name="f1">F1</string>
    <string name="f2">F2</string>
    <string name="save_all">Save All</string>
    <string name="clear_all">Clear All</string>

    <!--etc-->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="connect">Connect</string>
    <string name="chat">Chat</string>
    <string name="connect_to">Connect To... </string>
    <string name="current_status">Current Status: </string>
    <string name="explore_time">Exploration Time</string>
    <string name="fastest_run_time">Fastest-Run Time</string>

    <!-- ArenaActivity -->
    <string name="exploration_time">Start Exploration</string>
    <string name="fpw_time">Start Fastest Path</string>
    <string name="exp_btn">EXPLORE</string>
    <string name="fpw_btn">RUN</string>
    <string name="exploration">Exploration</string>
    <string name="fastestwaypoint">Fastest WP</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="reset">RESET</string>
    <string name="select">SELECT</string>
    <string name="robot_start"><u>Robot Start</u></string>
    <string name="waypoint"><u>Waypoint</u></string>
    <string name="exit_arena">Exit Arena</string>
    <string name="robot_status">Status</string>
    <string name="update_mode">Update Mode</string>
    <string name="auto">AUTO</string>
    <string name="manual">MANUAL</string>
    <string name="update">UPDATE</string>
    <string name="test">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="timer_default">0:00</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="Xpos">Xpos</string>
    <string name="Ypos">Ypos</string>

</resources>
